; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_inet.c_mac_ipq_destroy.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_inet.c_mac_ipq_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipq = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_ipq_destroy(%struct.ipq* %0) #0 {
  %2 = alloca %struct.ipq*, align 8
  store %struct.ipq* %0, %struct.ipq** %2, align 8
  %3 = load %struct.ipq*, %struct.ipq** %2, align 8
  %4 = getelementptr inbounds %struct.ipq, %struct.ipq* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.ipq*, %struct.ipq** %2, align 8
  %9 = getelementptr inbounds %struct.ipq, %struct.ipq* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @mac_ipq_label_free(i32* %10)
  %12 = load %struct.ipq*, %struct.ipq** %2, align 8
  %13 = getelementptr inbounds %struct.ipq, %struct.ipq* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @mac_ipq_label_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
